<resources>
    <string name="app_name">food-shop</string>
    <string name="main">Главная</string>
    <string name="search">Поиск</string>
    <string name="cart">Корзина</string>
    <string name="profile">Аккаунт</string>

    <string name="bread">Пекарни и кондитерские</string>
    <string name="fast_food">Фастфуд</string>
    <string name="asian_kitchen">Азиатская кухня</string>
    <string name="soups">Супы</string>

    <string name="all_dishes">Все меню</string>
    <string name="salad">Салаты</string>
    <string name="with_rice">С рисом</string>
    <string name="with_fish">С рыбой</string>
    <string name="rolls">Роллы</string>
    <string name="empty_dishes">Таких блюд нет</string>
    <string name="empty_cart">Добавте в корзину блюдо</string>
    <string name="went_wrong">Что то пошло не так</string>
    <string name="buy">Оплатить</string>

    <string name="january">Января</string>
    <string name="february">Февраля</string>
    <string name="march">Марта</string>
    <string name="april">Апреля</string>
    <string name="may">Мая</string>
    <string name="june">Июня</string>
    <string name="juli">Июля</string>
    <string name="august">Августа</string>
    <string name="september">Сентября</string>
    <string name="october">Октебря</string>
    <string name="november">Ноября</string>
    <string name="december">Декабря</string>
    <string name="on_gps">Включите GPS</string>
    <string name="pay">Оплатить</string>
    <string name="no_internet">Нет подключения к интернету</string>
</resources>